Closed Bug 20613 Opened 26 years ago Closed 26 years ago

Can't click on blank lines caused by newlines in plain text editor

Categories

(Core :: DOM: Editor, defect, P3)

All
Mac System 8.5
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: sfraser_bugs, Assigned: mozeditor)

Details

In the plain text editor, line breaks are caused either by <br> tags, or by newlines in the content (since we're in a <pre> block). We probably need to be consistent about what is used, so that things like clicking on blank lines works. This means that we have to convert newlines to <br> when initializing the plain text editor.
Target Milestone: M13
setting to M13
Status: NEW → ASSIGNED
accepting bug
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
fixed. all breaks now. to test, note that you can click on blank lines in text fields that are initialized with some blank lines.
Status: RESOLVED → VERIFIED
verified in 1/13 build.
You need to log in before you can comment on or make changes to this bug.