fixed bug 20613 & 21121: both invloved newlines in preformatted text.  Layout gives no frames for blanklines caused by newlines, so you cant click or arrow to them.  I replace such newlines with breaks now.fixed 21196: select all no longer selects the special break we use in empty documents (this would cause an invisible selection).fixed 21430: choosing a new alignment in an empty doc used to do nothing.  Now it works but I've exposed a selection bug inthe process...fixed 22225: a little unintended re-entrancy caused multiple breaks to be inserted in empty table cells when doc read in.